# rikki

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  language-spec.md  possible-names.md  pyproject.toml
.github/workflows/: ci.yml  farewell.yml  pages.yml  release.yml
art/: DESIGN.md  LICENSE  logo.af  logo.af~lock~
docs/: backlog.md  nevla-primer.md  rikki-primer.md
docs/adr/: 0001-rust-tree-walking-interpreter.md  0002-embedded-cpython-pyo3-uv.md  0003-errors-as-values-options-no-nil.md  0004-value-semantics-py-reference-exception.md  0005-errors-may-reach-main.md  0006-no-garbage-collector.md  0008-go-syntax-for-maps-and-loops.md  0009-closures-share-immutable-captures.md  0010-go-copy-model.md  0011-distribute-as-python-wheels.md  0014-rename-to-nevla.md  0015-script-stdlib.md  0016-proc-module.md  0017-descriptive-names.md  0018-identifier-case.md  0020-factored-imports-and-tidy.md  0021-byte-and-compact-byte-lists.md
docs/book/: .gitignore  book.toml  gen-reference.nv  gen-reference.py  gen-reference.rk  preprocess.nv  preprocess.py  preprocess.rk
docs/book/src/: SUMMARY.md  control-flow.md  errors.md  functions.md  intro.md  mascot.md  modules.md  options.md  py.md  testing.md  tour.md  values.md
docs/book/theme/: nevla.css  rikki.css
docs/plans/: 2026-07-01-mongoose-v1-interpreter.md  2026-07-02-matmul-operator.md  2026-07-13-bytes-implementation.md  2026-07-14-model-api.md
docs/proposals/: concurrency.md
docs/specs/: 2026-07-01-mongoose-v1-design.md  2026-07-02-go-reference-semantics-design.md  2026-07-02-nvim-editor-support-design.md  2026-07-09-context-managers-design.md  2026-07-09-exported-visibility-design.md  2026-07-09-fmt-design.md  2026-07-10-script-stdlib-design.md  2026-07-13-bytes-design.md
editors/nvim/: README.md
editors/nvim/ftdetect/: rikki.vim
editors/nvim/ftplugin/: rikki.lua
editors/nvim/syntax/: rikki.vim
examples/chat/: chat.mg  chat.nv  chat.rk
examples/scripts/: break_bridge.nv  break_nevla.nv  dev_watch.nv  fib.nv  fib.rk  file.nv  file.rk  fiz_buzz.nv  fiz_buzz.rk  got.nv  httpcheck.nv  prune.nv  todos.nv  wait_for.nv
examples/similarity/src/: main.mg  main.rk
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_check.rs
packaging/: repair-wheel.nv  repair-wheel.py  repair-wheel.rk
packaging/farewell/: README.md  pyproject.toml
packaging/farewell/rikki_lang_farewell/: __init__.py
packaging/homebrew/: nevla.rb  rikki.rb
playground/: Cargo.toml
playground/site/: index.html  main.js  style.css
playground/src/: lib.rs
site/: index.html
src/: ast.rs  bridge.rs  bridge_wasm.rs  builtins.rs  diag.rs  fmt.rs  format.rs  imports.rs  interp.rs  lexer.rs  lib.rs  loader.rs  main.rs  parser.rs  project.rs  repl.rs  tidy.rs  token.rs  typecheck.rs  types.rs  value.rs
src/model/: mod.rs  resolve.rs  symbols.rs
src/stdlib/: ctx.rs  file.rs  flag.rs  gpu.rs  http.rs  math.rs  mod.rs  proc.rs  test.rs  time.rs
src/typecheck/: expr.rs  mod.rs  sigs.rs
tests/: book.rs  cli.rs  fmt.rs  golden.rs  model.rs  torch_e2e.rs
tests/golden/: PENDING
tests/golden/builtins/: args.rk  bytes-map-int.nv  bytes-map-int.out  bytes-map-repack.nv  bytes-map-repack.out  bytes-mixed-tags.nv  bytes-mixed-tags.out  conv.out  conv.rk  printf-argc.err  printf.mg  printf.out  printf.rk
tests/golden/check/: append-mismatch.err  append-mismatch.rk  append-non-list.err  append-non-list.rk  arity.err  arity.rk  byte-arithmetic.err  byte-arithmetic.nv  byte-int-mixing.err  byte-int-mixing.nv  bytes-map-undeclared.err  bytes-map-undeclared.nv  bytes-no-cross-conversion.err  bytes-no-cross-conversion.nv  bytes-no-implicit-list.err  bytes-no-implicit-list.nv  check-outside.err  check-outside.rk  closure-captured-write.err  closure-captured-write.rk  concat-opt-list.rk  ctx-lit.err  ctx-lit.rk  (+53 more)
(+175 files in other folders)
