[package]
name = "nevla"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Interpreted language with Go's discipline and CPython's ecosystem"

[dependencies]
clap = { version = "4", features = ["derive"] }
glob = "0.3"
regex = "1"
indexmap = "2"
toml = "1.1.2"

# flock + gethostname for the gputex lock protocol (stdlib/gpu.rs)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# native-only: the py bridge, http, SIGINT handling, and local civil time
# have no wasm story; the playground build stubs them (src/bridge_wasm.rs,
# cfg gates)
# build.rs stamps the linked CPython's major.minor at compile time
# (bridge::embedded_python); the runtime Py_GetVersion call it replaces
# came back empty on 2026-07-10 GitHub runners
[build-dependencies]
pyo3-build-config = "0.29"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ctrlc = "3.5.2"
pyo3 = { version = "0.29.0", features = ["py-clone"] }
ureq = "3.3.0"

[[bin]]
name = "nevla"
path = "src/main.rs"
